--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,22 +1,23 @@
 name: Generate GitHub Snake
-
 on:
-  push:
-    branches:
-      - main
-
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 jobs:
-  generate-snake:
+  build:
+    name: Jobs to update GitHub Snake
     runs-on: ubuntu-latest
     steps:
-      - name: Generate GitHub Snake
-        uses: Platane/snk@v3
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
+  
         with:
-          # GitHub user name to read the contribution graph from (**required**)
-          github_user_name: ${{ github.repository_owner }}
-
-          # List of files to generate.
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          github_user_name: wangyenshu
+          svg_out_path: dist/github-contribution-grid-snake.svg
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
